# condy

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build-and-test-latest-kernel.yml  build-and-test-latest.yml  build-and-test-liburing-versions.yml  build-and-test.yml  deploy-gh-pages.yaml  static-check.yml
benchmarks/: CMakeLists.txt  channel.cpp  overhead.cpp  post.cpp  spawn_tasks.cpp  spawn_tasks_remote.cpp
docs/: bench.md  build.md  examples.md  guide.md  ops.md
examples/: CMakeLists.txt  bpf-example.cpp  bpf_example.bpf.c  cancel-tasks.cpp  condy-cp.cpp  custom-allocator.cpp  echo-server.cpp  echo_server.cpp  fast-cp.cpp  file-server.cpp  futex-semaphore.cpp  hello.cpp  link-cp.cpp  queue-condy-futex.cpp  queue-kernel-futex.cpp  queue.cpp
include/: condy.hpp
include/condy/: async_operations.hpp  awaiter.hpp  awaiter_operations.hpp  awaiters.hpp  buffers.hpp  channel.hpp  channel_legacy.hpp  concepts.hpp  condition_variable.hpp  condy_uring.hpp  context.hpp  coro.hpp  coro.inl  cqe_handler.hpp  event_loop.hpp  execution.hpp  finish_handle.hpp  finish_handle_base.hpp  finish_handles.hpp  finish_handles.inl  futex.hpp  helpers.hpp  intrusive.hpp  invoker.hpp  io_uring.hpp  link_list.hpp  mutex.hpp  op_states.hpp  pmr.hpp  provided_buffers.hpp  queue.hpp  retry.hpp  ring.hpp  runtime.hpp  runtime_options.hpp  semaphore.hpp  sender_operations.hpp  senders.hpp  shuffle_generator.hpp  singleton.hpp  (+12 more)
scripts/: check-all.sh  format-all.sh  format_all.sh  light-initrd.sh  light-kernel.sh  run-bench.sh  vm-run.sh
tests/: CMakeLists.txt  helpers.hpp  test_async_operations.1.cpp  test_async_operations.2.cpp  test_async_operations.3.cpp  test_async_operations.4.cpp  test_async_operations.cpp  test_awaiter_operations.cpp  test_buffer_table.cpp  test_buffers.cpp  test_channel.cpp  test_conditional_variable.cpp  test_context.cpp  test_coro.cpp  test_event_loop.cpp  test_execution.cpp  test_fd_table.cpp  test_futex.cpp  test_intrusive.cpp  test_invoker.cpp  test_io_uring.cpp  test_link_list.cpp  test_mutex.cpp  test_op_awaiter.cpp  test_op_finish_handle.cpp  test_parallel_awaiter.cpp  test_parallel_finish_handle.cpp  test_queue.cpp  test_retry.cpp  test_ring.cpp  test_ring_settings.cpp  test_runtime.cpp  test_runtime_options.cpp  test_semaphore.cpp  test_senders.cpp  test_shuffle_generator.cpp  test_singleton.cpp  test_sync_wait.cpp  test_task.cpp  test_timer.cpp  (+4 more)
tests/test_crash/: CMakeLists.txt  test_channel_close_and_push.cpp  test_channel_close_with_awaiters.cpp  test_channel_destroy_with_awaiters.cpp  test_detached_task_exception.cpp  test_task_not_join.cpp
