file(GLOB SRC CONFIGURE_DEPENDS "*.cpp")
add_executable(tests ${SRC})
target_link_libraries(tests PRIVATE doctest condy uring)

if (TESTS_STATIC_LINK)
    message(STATUS "Configuring tests with static linking")
    target_link_options(tests PRIVATE -static)
elseif (TESTS_TSAN)
    message(STATUS "Configuring tests with thread sanitizer")
    target_compile_options(tests PRIVATE -fsanitize=thread)
    target_link_options(tests PRIVATE -fsanitize=thread)
elseif (TESTS_ASAN)
    message(STATUS "Configuring tests with address and undefined behavior sanitizers")
    target_compile_options(tests PRIVATE -fsanitize=address,undefined)
    target_link_options(tests PRIVATE -fsanitize=address,undefined)
endif()

add_test(NAME tests COMMAND tests)

add_subdirectory(test_crash)